--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "react-icons": "^4.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-timeline-scribble": "^1.0.14",
+    "react-vertical-timeline-component": "^3.5.2",
     "reactstrap": "^9.1.2",
+    "simplebar-react": "^2.4.1",
     "styled-components": "^5.3.5",
     "tailwindcss": "^3.1.6",
     "web-vitals": "^2.1.4"
