--- a/package.json
+++ b/package.json
@@ -4,12 +4,24 @@
   "private": true,
   "dependencies": {
     "@emailjs/browser": "^3.6.2",
-    "@emotion/react": "^11.9.3",
+    "@emotion/react": "^11.10.0",
     "@emotion/styled": "^11.9.3",
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@fullcalendar/daygrid": "^5.11.2",
     "@fullcalendar/react": "^5.11.2",
+    "@mantine/carousel": "^5.0.3",
+    "@mantine/core": "^5.0.3",
+    "@mantine/dates": "^5.0.3",
+    "@mantine/dropzone": "^5.0.3",
+    "@mantine/form": "^5.0.3",
+    "@mantine/hooks": "^5.0.3",
+    "@mantine/modals": "^5.0.3",
+    "@mantine/notifications": "^5.0.3",
+    "@mantine/nprogress": "^5.0.3",
+    "@mantine/prism": "^5.0.3",
+    "@mantine/rte": "^5.0.3",
+    "@mantine/spotlight": "^5.0.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.9.2",
     "@mui/styled-engine-sc": "^5.8.0",
@@ -20,7 +32,9 @@
     "autoprefixer": "^10.4.7",
     "bootstrap": "^5.2.0",
     "chart.js": "^3.8.2",
+    "dayjs": "^1.11.4",
     "emailjs": "^4.0.0",
+    "embla-carousel-react": "^7.0.0",
     "firebase": "^9.9.1",
     "hamburger-react": "^2.5.0",
     "postcss": "^8.4.14",
@@ -32,7 +46,7 @@
     "react-scripts": "5.0.1",
     "react-timeline-scribble": "^1.0.14",
     "react-vertical-timeline-component": "^3.5.2",
-    "reactstrap": "^9.1.2",
+    "reactstrap": "^9.1.3",
     "simplebar-react": "^2.4.1",
     "styled-components": "^5.3.5",
     "tailwindcss": "^3.1.6",
